--- a/per-file/feature-b-config.json
+++ b/per-file/feature-b-config.json
@@ -1,3 +1,3 @@
 {
-  "value": "this is a feature B config file"
+  "value": "this is a feature B config file, testing the edit from a feature A team"
 }
