Sub-feature-b should only require 1 approval

--- a/feature-b/sub-feature-b/approvers.yml
+++ b/feature-b/sub-feature-b/approvers.yml
@@ -1,6 +1,5 @@
 approvers:
+  minApprovals: 1
   teams:
     - dummy-testing-org/feature-b
-  optional:
-    users:
-      - alexandreos
+    - dummy-testing-org/feature-a-1
