test no required approvers

--- a/per-file/approvers.yml
+++ b/per-file/approvers.yml
@@ -4,11 +4,10 @@ approvers:
       - alexandreos
   filePatterns:
     - pattern: "feature-a-config.json"
+      minApprovals: 1
       teams:
         - dummy-testing-org/feature-a-1
+        - dummy-testing-org/feature-b
       optional:
         teams:
           - dummy-testing-org/feature-a-2
-    - pattern: "feature-b-config.json"
-      teams:
-        - dummy-testing-org/feature-b
