--- a/per-file/feature-a-config.json
+++ b/per-file/feature-a-config.json
@@ -1,3 +1,3 @@
 {
-  "value": "this is a feature A config file"
+  "value": "this is a feature A config file. Now testing if I can merge with only 1 approval out of all required"
 }
